--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <footer>
             <h3>
-                © 2023 – 2023 Only Dev | All Rights Reserved
+                © 2023 – 2023 GalacticGameDeveloper | All Rights Reserved
             </h3>
         </footer>
 
